# phpstudy-N-slides-template

./: .gitignore  Dockerfile  Makefile  README.md  justfile  setoka.typ  slide.saty  slides.saty  slides.typ
patches/: figbox.satyh.patch
plugins/tokenize-ja/: .gitignore  Cargo.toml
plugins/tokenize-ja/src/: lib.rs  tokenize.rs
slydifi/: LICENSE  my-theme.satyh
